<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="defaultScreen">Let\'s calculate some shit!</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonComma">,</string>
    <string name="buttonEqual">=</string>
    <string name="buttonSum">+</string>
    <string name="buttonSubstract">-</string>
    <string name="buttonMultiplicate">x</string>
    <string name="buttondivide">÷</string>
    <string name="buttonReset">Reset</string>
    <string name="buttonSqrt">√</string>
    <string name="buttonElevate">^</string>
    <string name="OHHead">Operations done</string>
    <string name="title_activity_operations_done">operationsDone</string>
</resources>
